Vedio autoplay change

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop muted>
+                            type="video/mp4" controls="controls"   loop muted>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
@@ -204,7 +204,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop>
+                            type="video/mp4" controls="controls"   loop>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
@@ -218,7 +218,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop>
+                            type="video/mp4" controls="controls"   loop>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
@@ -236,7 +236,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop>
+                            type="video/mp4" controls="controls"   loop>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
@@ -250,7 +250,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop>
+                            type="video/mp4" controls="controls"   loop>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
@@ -264,7 +264,7 @@
                     <div class="vedio">
                         <video class="w-100 h-100"
                             src="./src/vedio/লোভী ব্যাবসায়ি ও জাদুফল _  New Moral Story _ Bengali Fairy Tales Cartoon _ Rupkothar Bangla.mp4"
-                            type="video/mp4" controls="controls" autoplay="autoplay" loop>
+                            type="video/mp4" controls="controls"   loop>
                         </video>
                         <div class="card-body text-center">
                             <h5 class="card-title">Card title</h5>
